trainin jupyter notebook

--- a/examples/environment_tutorial.ipynb
+++ b/examples/environment_tutorial.ipynb
@@ -47,7 +47,7 @@
    "metadata": {},
    "source": [
     "\n",
-    "## Can your agent self control?\n",
+    "## Can your agent self control? - Part I\n",
     "\n",
     "Self control is hard, we've all been there (looking at you chocolate bar). But don't worry, this is something a lot of species struggle with. In [The evolution of self-control](https://www.pnas.org/content/111/20/E2140) MacLean et al. tested this ability in **36 different species**! In a very simple experiment, animals are offered food they can reach easily by reaching out to it. But then, they're shown the same food behind a transparent wall, they need to go around the wall to grab the food. They can see the food just as well, but they need to refrain from reaching out like before.\n",
     "\n",
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {
     "scrolled": true
    },
@@ -114,7 +114,7 @@
      "text": [
       "!ArenaConfig\n",
       "arenas:\n",
-      "  0: !Arena\n",
+      "  -1: !Arena\n",
       "    pass_mark: 0\n",
       "    t: 250\n",
       "    items:\n",
@@ -142,6 +142,19 @@
    "metadata": {},
    "source": [
     "This file contains the configuration of one arena (`!Arena`), with only the agent on the ground (`y=0`) in the center (`x=20`,`z=20`) and a `GoodGoal` (green sphere) of size 1 in front of it (`x=20`,`z=22`). Pretty simple right!\n",
+    "\n",
+    "One _little trick_ we used here: one environment can contain several arenas during training, each with its own configuration. This allows your training algorithm to collect more observations at once. You can just place the configurations one after the others like this:\n",
+    "```\n",
+    "!ArenaConfig\n",
+    "arenas:\n",
+    "  0: !Arena\n",
+    "    ......\n",
+    "  1: !Arena\n",
+    "    ......\n",
+    "  2: !Arena\n",
+    "    ......\n",
+    "```\n",
+    "But if you want all the arenas in the environment to have the same configuration then do as we did above: define one configuration only with key `-1`\n",
     "\n",
     "You can now use this to load an environment and play yourself ([this script does that for you](./load_config_and_play.py)). Make sure you have followed the [installation guide](../README.md#requirements) and then create an `AnimalAIEnvironment` in play mode:"
    ]
@@ -327,7 +340,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This tells you that we'll switch from one level to the next once the reward per episod is above 0.8. Easy right?"
+    "This tells you that we'll switch from one level to the next once the reward per episod is above 0.8. Easy right?\n",
+    "\n",
+    "In the next notebook we'll use the above curriculum example to train an agent that can solve the tube task we saw in the videos earlier. Before that, it is worth looking at an extra feature of the environment (blackouts) and use that to interact with the environment from python rather than playing manually."
    ]
   },
   {
