fix typos and broken links

--- a/examples/environment_tutorial.ipynb
+++ b/examples/environment_tutorial.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "This tutorial is a step-by-step presentation of the new version of the Animal-AI library. The new Animal-AI environment is quite similar to the version used for the competition, however the `animalai` and `animalai_train` APIs have been dramatically improved, reflecting the great improvements made by [Unity ml-agents](https://github.com/Unity-Technologies/ml-agents).\n",
     "\n",
-    "In this notebook, **we present the environment and how to design both your training and testing setups**. In the [second notebook (training)](./training_tutorial.pynb) we'll show you how to train an agent to solve a task it has never seen before."
+    "In this notebook, **we present the environment and how to design both your training and testing setups**. In the second notebook (training) we'll show you how to train an agent to solve a task it has never seen before."
    ]
   },
   {
@@ -19,11 +19,11 @@
     "\n",
     "Our goal is to provide a tool for researchers to go beyond classical RL environments, allowing you to develop agents that possess cogintive skills similar to animal's. The main idea is to be able to test and/or train your agents on **experiments taken or inspired from real life animal experiments**. This repository holds 900 such experiments which cover a dozen cognitive skills. You can find more details on the test-bed on [our website](http://animalaiolympics.com/AAI/testbed)\n",
     "\n",
-    "The environment is a simple arena with an agent that can only move left, right, forward and backward, aiming to collect positive reward and avoid negative ones. It can also hold [several objects](../documentation/definitionsOfObjects.md) which can be used to set up experiments. You can really put yourself in the shoes of an animal cognition scientist building experiments with whatever you can find in a lab.\n",
+    "The environment is a simple arena with an agent that can only move left, right, forward and backward, aiming to collect positive reward and avoid negative ones. It can also hold [several objects](https://github.com/beyretb/AnimalAI-Olympics/blob/master/documentation/definitionsOfObjects.md) which can be used to set up experiments. You can really put yourself in the shoes of an animal cognition scientist building experiments with whatever you can find in a lab.\n",
     "\n",
     "From the agent's perspective, a classical experiment called a Y-maze looks like this(the agent must explore a simple Y-shaped maze to find a reward, often food):\n",
     "\n",
-    "<img src=\"documentation/notebook_data/y_maze.png\" width=\"40%\">\n",
+    "<img src=\"notebook_data/y_maze.png\" width=\"40%\">\n",
     "\n",
     "The agent is on an elevated platform (blue), needs to move towards the reward (green ball) and avoid going to the right in which case the agent would be stuck (the platform is too high for the agent to climb back on).\n",
     "\n",
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -68,7 +68,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -81,7 +81,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In the following sections we'll design a training curriculum which does not include the exact \"reward in a transparent cylinder\" task, but which we can use to train an agent that can solve this same task. In the [next tutorial](./training_tutorial.pynb), we'll train such an agent using this curriculum.\n"
+    "In the following sections we'll design a training curriculum which does not include the exact \"reward in a transparent cylinder\" task, but which we can use to train an agent that can solve this same task. In the training tutorial, we'll train such an agent using this curriculum.\n"
    ]
   },
   {
@@ -90,7 +90,7 @@
    "source": [
     "## Let's get started: experiments design\n",
     "\n",
-    "First things first, as rigorous researchers, we want to design a good training environment. To do so, we provide a [list of items](../documentation/definitionsOfObjects.md) you can include in your arena, you can have a look at the details later, this section highlights the basics.\n",
+    "First things first, as rigorous researchers, we want to design a good training environment. To do so, we provide a [list of items](https://github.com/beyretb/AnimalAI-Olympics/blob/master/examples/environment_tutorial.ipynb) you can include in your arena, you can have a look at the details later, this section highlights the basics.\n",
     "\n",
     "To begin with let's train an agent to collect food right in front of it, as simple as that! To do so, you'll need to design a `yaml` file which describes the experiment setup. It contains:\n",
     "\n",
@@ -156,7 +156,7 @@
     "```\n",
     "But if you want all the arenas in the environment to have the same configuration then do as we did above: define one configuration only with key `-1`\n",
     "\n",
-    "You can now use this to load an environment and play yourself ([this script does that for you](./load_config_and_play.py)). Make sure you have followed the [installation guide](../README.md#requirements) and then create an `AnimalAIEnvironment` in play mode:"
+    "You can now use this to load an environment and play yourself (`load_config_and_play.py` does that for you). Make sure you have followed the [installation guide](https://github.com/beyretb/AnimalAI-Olympics#requirements) and then create an `AnimalAIEnvironment` in play mode:"
    ]
   },
   {
@@ -215,7 +215,7 @@
     "4. agent and food randomly placed and rotated each on a fixed z-axis, and small transparent wall in between the two\n",
     "5. same as 4 with bigger and bigger walls\n",
     "\n",
-    "To design a curriculum, we need to place all the yaml files in a folder along with a json configuration file which contains the details of when to switch from one level to the next. The above curriculum can be found in [this folder](./examples/configurations/curriculum).\n",
+    "To design a curriculum, we need to place all the yaml files in a folder along with a json configuration file which contains the details of when to switch from one level to the next. The above curriculum can be found in `configurations/curriculum`.\n",
     "\n",
     "The second configuration is just like the first but with say `z: 35` for `GoodGoal`. The third one only requires to randomize the rotation, to do so we can replace the `rotations: [0]` with `rotations: [-1]` as any parameter with a value of `-1` is randomized. Otherwise you can just remove the `rotations` line altogether, and the rotation will be randomized automatically (also works with positions, sizes and colors).\n",
     "\n",
@@ -659,7 +659,7 @@
     "\n",
     "If you want to train using ml-agents, it is a very modular framework which requires some work to plug your own meodel in (depending on how far they are from PPO or SAC), but it's worth it! \n",
     "\n",
-    "Have a look at the second notebook on [training an agent using animalai-train](training_tutorial.ipynb)"
+    "Have a look at the second notebook on training an agent using animalai-train."
    ]
   },
   {
