great success *borat accent*

--- a/examples/Random_env_viewer.ipynb
+++ b/examples/Random_env_viewer.ipynb
@@ -33,8 +33,8 @@
     "seed = 1\n",
     "\n",
     "\n",
-    "# yaml_path = 'examples/rand_env.yml'\n",
-    "# ac = ArenaConfig(yaml_path)\n",
+    "yaml_path = '../neuro/configurations/curriculum2/0.yml'\n",
+    "ac = ArenaConfig(yaml_path)\n",
     "# arena_path = \"competition_configurations/5-10-3.yml\" #'configurations/curriculum/0.yaml'\n",
     "# ac = ArenaConfig(arena_path)\n",
     "# ac.arenas[1] = copy.deepcopy(ac.arenas[0])\n",
@@ -42,9 +42,10 @@
     "env = AnimalAIGym(environment_filename=env_path,\n",
     "              worker_id=worker_id,\n",
     "              n_arenas=1,\n",
-    "              arenas_configurations=None,\n",
+    "              arenas_configurations=ac,\n",
     "#                 use_visual=False,\n",
     "                seed=seed,\n",
+    "                  play=True,\n",
     "                 grayscale=False)\n",
     "\n"
    ]
@@ -192,11 +193,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'NoneType' object has no attribute 'arenas'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-76645ab2b7e4>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     23\u001b[0m \u001b[0;31m# for i in range(20):\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     24\u001b[0m \u001b[0myaml_path\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34mf'../neuro/configurations/curriculum2/17.yml'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 25\u001b[0;31m \u001b[0mac\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mArenaConfig\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0myaml_path\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     26\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     27\u001b[0m env = AnimalAIEnvironment(\n",
+      "\u001b[0;32m~/Desktop/animalai/animalai/animalai/animalai/envs/arena_config.py\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, yaml_path)\u001b[0m\n\u001b[1;32m    105\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    106\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0myaml_path\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 107\u001b[0;31m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0marenas\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0myaml\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0myaml_path\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"r\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mLoader\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0myaml\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mLoader\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0marenas\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    108\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    109\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0marenas\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m{\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'NoneType' object has no attribute 'arenas'"
+     ]
+    }
+   ],
    "source": [
     "import sys\n",
     "sys.path.insert(0, \"/Users/ludo/Desktop/animalai/animalai/animalai_train\")\n",
@@ -220,14 +234,15 @@
     "\n",
     "worker_id = 0\n",
     "seed = 1\n",
-    "yaml_path = 'rand_env.yml'\n",
+    "# for i in range(20):\n",
+    "yaml_path = f'../neuro/configurations/curriculum2/17.yml'\n",
     "ac = ArenaConfig(yaml_path)\n",
     "\n",
     "env = AnimalAIEnvironment(\n",
-    "                    file_name=None,\n",
+    "                    file_name=env_path,\n",
     "                    arenas_configurations = ac,\n",
     "                    worker_id=worker_id,\n",
-    "                    play=False, base_port=5004,\n",
+    "                    play=True, base_port=5004,\n",
     "                    )\n",
     "# env = AnimalAIGym(environment_filename=env_path,\n",
     "#               worker_id=worker_id,\n",
