--- a/examples/train_no_vis.ipynb
+++ b/examples/train_no_vis.ipynb
@@ -2,15 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": "AnimalAI:\n    trainer: ppo\n    epsilon: 0.2\n    lambd: 0.95\n    learning_rate: 3.0e-4\n    learning_rate_schedule: linear\n    memory_size: 128\n    normalize: false\n    sequence_length: 64\n    summary_freq: 10000\n    use_recurrent: false\n    # vis_encode_type: simple\n    time_horizon: 128\n    batch_size: 64\n    buffer_size: 2024\n    hidden_units: 100\n    num_layers: 1\n    beta: 1.0e-2\n    max_steps: 1.0e7\n    num_epoch: 3\n    reward_signals:\n        extrinsic:\n            strength: 1.0\n            gamma: 0.99\n        curiosity:\n            strength: 0.01\n            gamma: 0.99\n            encoding_size: 128\n"
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "import os\n",
@@ -23,8 +17,8 @@
     "\n",
     "from animalai.envs.environment import AnimalAIEnvironment\n",
     "\n",
-    "# import warnings\n",
-    "# warnings.filterwarnings('ignore')\n",
+    "import warnings\n",
+    "warnings.filterwarnings('ignore')\n",
     "import tensorflow as tf\n",
     "tf.compat.v1.logging.set_verbosity(tf.compat.v1.logging.ERROR)\n",
     "\n",
@@ -41,13 +35,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "environment_path = \"../env/env8\"\n",
-    "curriculum_path = \"configurations/curriculum1\"\n",
-    "run_id = \"no_vis_curriculum\"\n",
+    "environment_path = \"../env/env9\"\n",
+    "curriculum_path = \"../neuro/configurations/curriculum2\"\n",
+    "run_id = \"blindgotox1\"\n",
     "base_port = 5005\n",
     "number_of_environments = 1\n",
     "number_of_arenas_per_environment = 1\n",
@@ -65,38 +59,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "display_data",
-     "data": {
-      "text/plain": "Launching TensorBoard..."
-     },
-     "metadata": {}
-    },
-    {
-     "output_type": "display_data",
-     "data": {
-      "text/plain": "<IPython.core.display.HTML object>",
-      "text/html": "\n      <iframe id=\"tensorboard-frame-7d3fa34da69846b2\" width=\"100%\" height=\"800\" frameborder=\"0\">\n      </iframe>\n      <script>\n        (function() {\n          const frame = document.getElementById(\"tensorboard-frame-7d3fa34da69846b2\");\n          const url = new URL(\"/\", window.location);\n          url.port = 6007;\n          frame.src = url;\n        })();\n      </script>\n  "
-     },
-     "metadata": {}
-    },
-    {
-     "output_type": "error",
-     "ename": "UnityEnvironmentException",
-     "evalue": "Couldn't launch the ../env/env8 environment. Provided filename does not match any environments.",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mUnityEnvironmentException\u001b[0m                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-3-4fc295c3f95a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0mget_ipython\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrun_line_magic\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'tensorboard'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'--logdir {logs_dir}'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 10\u001b[0;31m \u001b[0mrun_training_aai\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0margs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m~/venv/lib/python3.6/site-packages/animalai_train/run_training_aai.py\u001b[0m in \u001b[0;36mrun_training_aai\u001b[0;34m(run_seed, options)\u001b[0m\n\u001b[1;32m     61\u001b[0m             \u001b[0moptions\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mn_arenas_per_env\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     62\u001b[0m             \u001b[0moptions\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0marena_config\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 63\u001b[0;31m             \u001b[0moptions\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mresolution\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     64\u001b[0m         )\n\u001b[1;32m     65\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0moptions\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtrain_model\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/venv/lib/python3.6/site-packages/animalai_train/environment_factory_aai.py\u001b[0m in \u001b[0;36mcreate_environment_factory_aai\u001b[0;34m(env_path, seed, start_port, n_arenas_per_env, arenas_configurations, resolution)\u001b[0m\n\u001b[1;32m     25\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mlaunch_string\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     26\u001b[0m             raise UnityEnvironmentException(\n\u001b[0;32m---> 27\u001b[0;31m                 \u001b[0;34mf\"Couldn't launch the {env_path} environment. Provided filename does not match any environments.\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     28\u001b[0m             )\n\u001b[1;32m     29\u001b[0m     \u001b[0;31m# docker_training = docker_target_name is not None\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mUnityEnvironmentException\u001b[0m: Couldn't launch the ../env/env8 environment. Provided filename does not match any environments."
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#TRAIN\n",
     "\n",
@@ -104,37 +69,23 @@
     "\n",
     "logs_dir = \"summaries/\"\n",
     "os.makedirs(logs_dir, exist_ok=True)\n",
-    "%load_ext tensorboard\n",
-    "%tensorboard --logdir {logs_dir}\n",
+    "# %load_ext tensorboard\n",
+    "# %tensorboard --logdir {logs_dir}\n",
     "\n",
     "run_training_aai(0, args)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "error",
-     "ename": "UnityEnvironmentException",
-     "evalue": "Couldn't launch the ../env/env8 environment. Provided filename does not match any environments.",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mUnityEnvironmentException\u001b[0m                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-4-e7aef69452f2>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     14\u001b[0m     \u001b[0marena_config\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mArenaConfig\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"configurations/arena_configurations/cylinder_task.yml\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     15\u001b[0m )\n\u001b[0;32m---> 16\u001b[0;31m \u001b[0mrun_training_aai\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0margs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m~/venv/lib/python3.6/site-packages/animalai_train/run_training_aai.py\u001b[0m in \u001b[0;36mrun_training_aai\u001b[0;34m(run_seed, options)\u001b[0m\n\u001b[1;32m     61\u001b[0m             \u001b[0moptions\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mn_arenas_per_env\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     62\u001b[0m             \u001b[0moptions\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0marena_config\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 63\u001b[0;31m             \u001b[0moptions\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mresolution\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     64\u001b[0m         )\n\u001b[1;32m     65\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0moptions\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtrain_model\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/venv/lib/python3.6/site-packages/animalai_train/environment_factory_aai.py\u001b[0m in \u001b[0;36mcreate_environment_factory_aai\u001b[0;34m(env_path, seed, start_port, n_arenas_per_env, arenas_configurations, resolution)\u001b[0m\n\u001b[1;32m     25\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mlaunch_string\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     26\u001b[0m             raise UnityEnvironmentException(\n\u001b[0;32m---> 27\u001b[0;31m                 \u001b[0;34mf\"Couldn't launch the {env_path} environment. Provided filename does not match any environments.\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     28\u001b[0m             )\n\u001b[1;32m     29\u001b[0m     \u001b[0;31m# docker_training = docker_target_name is not None\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mUnityEnvironmentException\u001b[0m: Couldn't launch the ../env/env8 environment. Provided filename does not match any environments."
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# EVALUATE\n",
     "from animalai.envs.arena_config import ArenaConfig\n",
     "\n",
     "#Comment the row below to load your trained model\n",
-    "run_id = \"self_control_curriculum_pre_trained\"\n",
+    "run_id = \"blindgotox1\"\n",
     "\n",
     "args = RunOptionsAAI(\n",
     "    trainer_config=load_config(trainer_config_path),\n",
@@ -150,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,21 +120,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "error",
-     "ename": "FileNotFoundError",
-     "evalue": "[Errno 2] No such file or directory: '/Users/ludo/Desktop/animalai/animalai'",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-7-09c49fb750d9>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mos\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlistdir\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"/Users/ludo/Desktop/animalai/animalai\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: '/Users/ludo/Desktop/animalai/animalai'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "os.listdir(\"/Users/ludo/Desktop/animalai/animalai\")"
@@ -191,18 +130,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "error",
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-8-0646f02a6ef2>, line 2)",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-8-0646f02a6ef2>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    person.things.extend([thing1, thing2, ..])\u001b[0m\n\u001b[0m                                          ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "del person.things[:]\n",
     "person.things.extend([thing1, thing2, ..])"
@@ -210,18 +140,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": "'/tmp'"
-     },
-     "metadata": {},
-     "execution_count": 9
-    }
-   ],
+   "outputs": [],
    "source": [
     "import tempfile\n",
     "tempfile.gettempdir()"
@@ -237,9 +158,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "ludo_aai_env",
+   "display_name": "animalaienv",
    "language": "python",
-   "name": "ludo_aai_env"
+   "name": "animalaienv"
   },
   "language_info": {
    "codemirror_mode": {
@@ -251,7 +172,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9-final"
+   "version": "3.6.2"
   }
  },
  "nbformat": 4,
