--- a/neuro/CurricGen2.ipynb
+++ b/neuro/CurricGen2.ipynb
@@ -2,11 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from random import randrange\n",
+    "from random import randrange, choice\n",
+    "import numpy as np\n",
     "locs = {\n",
     "    'agent_x':0,\n",
     "    'agent_z':0,\n",
@@ -14,24 +15,26 @@
     "    'goals':\"\",\n",
     "    'wall_x':0,\n",
     "    'wall_z':0,\n",
-    "    'wall_size':0\n",
+    "    'wall_size':0,\n",
+    "    'wall_tall':0\n",
     "}\n",
     "def valid_loc(diff=0, num_goals=3,side='left'):\n",
     "    res = locs.copy()\n",
-    "    agent_x = randrange(1,39)\n",
+    "    agent_x = randrange(5,35)\n",
     "    agent_z = randrange(1,10-diff)\n",
-    "    if diff==0:\n",
-    "        wall_x = agent_x\n",
-    "    else:\n",
-    "        wall_x = randrange(10+diff,30-diff)\n",
+    "    wall_tall = randrange(2,5)\n",
+    "    wall_x = agent_x + choice([1,-1])*randrange(diff*4,1+diff*8)\n",
+    "    wall_x = max(min(wall_x,35-diff*2),5+diff*2)\n",
     "    wall_z = agent_z + randrange(6+diff,7+diff*4)\n",
     "    if wall_z>39:\n",
     "        wall_z = 35\n",
     "    wall_size = randrange(2+diff*3,3+diff*5)\n",
-    "    if (wall_x + wall_size) > 37:\n",
+    "    if (wall_x + wall_size/2) > 35:\n",
     "        wall_size = 39-wall_x\n",
-    "    if (wall_x-wall_size)<3:\n",
+    "    if (wall_x-wall_size/2)<5:\n",
     "        wall_size = int(wall_x/2-1)\n",
+    "        if wall_size<2:\n",
+    "            wall_size=2\n",
     "    goals = gen_goals(wall_x, wall_z,wall_size, diff, num_goals, side)\n",
     "    wall_diff = wall_x - agent_x\n",
     "    if wall_diff>0: # wall is to the right\n",
@@ -56,19 +59,19 @@
     "        sign = -1\n",
     "    else:\n",
     "        sign = 1\n",
-    "    for i in range(1,num+1):\n",
+    "    for i in range(0,num):\n",
     "        specs = {\n",
-    "            'x': int(wall_x+(sign*wall_size/2 + sign*i))-sign*min(diff,3),\n",
+    "            'x': wall_x+(sign*((wall_size/2)+0.5+i))-sign*max(0,min(diff-1,3)),\n",
     "            'z': wall_z+min(diff,3)\n",
     "        }\n",
     "        res.append(a_goal.format(**specs))\n",
     "    return \"\".join(res)\n",
     "\n",
     "num_arenas = 50\n",
-    "curric_num = 7\n",
+    "curric_num = 8\n",
     "for i in range(0,num_arenas):\n",
     "    \n",
-    "    locs = valid_loc(int(i/10))\n",
+    "    locs = valid_loc(int(i/10), side='right')\n",
     "    if any((v>39)|(v<0) for k,v in locs.items() if k not in ['agent_rot','goals']):\n",
     "        raise Exception(f\"BAD ENTRY {locs}\")\n",
     "    arena = \"\"\"!ArenaConfig\n",
@@ -85,20 +88,48 @@
     "          positions:\n",
     "          - !Vector3 {{x: {wall_x}, y: 0, z: {wall_z}}}\n",
     "          sizes:\n",
-    "          - !Vector3 {{x: {wall_size}, y: 5, z: 2}}\n",
+    "          - !Vector3 {{x: {wall_size}, y: {wall_tall}, z: 2}}\n",
     "          rotations: [0]\n",
     "          colors: \n",
     "          - !RGB {{r: 153, g: 153, b: 153}}\n",
     "        pass_mark: 0\n",
     "        t: 250\"\"\".format(**locs)\n",
-    "    text_file = open(f\"configurations/curriculum7/{i}.yml\", \"w\")\n",
+    "    text_file = open(f\"configurations/curriculum{curric_num}/{i}.yml\", \"w\")\n",
     "    text_file.write(arena)\n",
-    "    text_file.close()"
+    "    text_file.close()\n",
+    "# for i in range(num_arenas,num_arenas*2):\n",
+    "    \n",
+    "#     locs = valid_loc(int(i/10))\n",
+    "#     if any((v>39)|(v<0) for k,v in locs.items() if k not in ['agent_rot','goals']):\n",
+    "#         raise Exception(f\"BAD ENTRY {locs}\")\n",
+    "#     arena = \"\"\"!ArenaConfig\n",
+    "#     arenas:\n",
+    "#       -1: !Arena\n",
+    "#         items:\n",
+    "#         - !Item\n",
+    "#           name: Agent\n",
+    "#           positions:\n",
+    "#           - !Vector3 {{x: {agent_x}, y: 0, z: {agent_z}}}\n",
+    "#           rotations: [{agent_rot}]{goals}\n",
+    "#         - !Item\n",
+    "#           name: Wall\n",
+    "#           positions:\n",
+    "#           - !Vector3 {{x: {wall_x}, y: 0, z: {wall_z}}}\n",
+    "#           sizes:\n",
+    "#           - !Vector3 {{x: {wall_size}, y: {wall_tall}, z: 2}}\n",
+    "#           rotations: [0]\n",
+    "#           colors: \n",
+    "#           - !RGB {{r: 153, g: 153, b: 153}}\n",
+    "#         pass_mark: 0\n",
+    "#         t: 250\"\"\".format(**locs)\n",
+    "#     text_file = open(f\"configurations/curriculum{curric_num}/{i}.yml\", \"w\")\n",
+    "#     text_file.write(arena)\n",
+    "#     text_file.close()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,10 +139,11 @@
     "a_thresh = []\n",
     "for i in range(num_arenas-1):\n",
     "    level = round(0.8-0.05*int(i/10),2)\n",
+    "    level = -1\n",
     "    a_thresh.append(level)\n",
     "json = {\n",
     "    \"measure\":\"reward\",\n",
-    "    \"min_lesson_length\":100,\n",
+    "    \"min_lesson_length\":1,\n",
     "    \"signal_smoothing\":True,\n",
     "    \"thresholds\":a_thresh,\n",
     "    \"configuration_files\":a_nums\n",
@@ -119,6 +151,26 @@
     "text_file = open(f\"configurations/curriculum{curric_num}/AnimalAI.json\", \"w\")\n",
     "text_file.write(str(json).replace(\"'\", '\"').replace(\",\", \",\\n\").replace('True','true'))\n",
     "text_file.close()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "randrange(0,1)"
    ]
   },
   {
